--- a/pom.xml
+++ b/pom.xml
@@ -58,17 +58,6 @@
 	</properties>
 
 	<build>
-		<defaultGoal>install</defaultGoal>
-		<sourceDirectory>${project.basedir}/src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>${project.basedir}/src</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-					<exclude>**/package.html</exclude>
-				</excludes>
-			</resource>
-		</resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -91,11 +80,11 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
+				<version>2.10.3</version>
 				<configuration>
-					<javadocDirectory>${project.basedir}/src</javadocDirectory>
+					<javadocDirectory>${project.basedir}/src/main/java</javadocDirectory>
 					<links>
-						<link>http://docs.oracle.com/javase/1.5.0/docs/api/</link>
+						<link>http://docs.oracle.com/javase/8/docs/api/</link>
 					</links>
 				</configuration>
 			</plugin>
