--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.jogamp.java3d</groupId>
 	<artifactId>vecmath</artifactId>
-	<version>1.6.0-SNAPSHOT</version>
+	<version>1.7.0</version>
 
 	<licenses>
 		<license>
