--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,10 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
+				<version>2.10.4</version>
 				<configuration>
 					<javadocDirectory>${project.basedir}/src/main/java</javadocDirectory>
+					<additionalparam>-Xdoclint:none</additionalparam>
 					<links>
 						<link>http://docs.oracle.com/javase/8/docs/api/</link>
 					</links>
