--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
 	<groupId>org.jogamp.java3d</groupId>
 	<artifactId>vecmath</artifactId>
 	<version>1.7.0</version>
+	
+	<name>Vector Maths Library</name>
+	<description>A Library supporting Vector Maths for the Java Platform</description>	
 
 	<licenses>
 		<license>
@@ -25,7 +28,7 @@
 		<developer>
 			<id>philjord</id>
 			<name>Philip Jordan</name>
-			<email>philjord@ihug.co.nz</email>
+			<email>p.j.nz@outlook.com</email>
 			<url>https://github.com/philjord</url>
 			<organization>JogAmp</organization>
 			<organizationUrl>http://jogamp.org/</organizationUrl>
@@ -43,6 +46,12 @@
 			<organizationUrl>http://jogamp.org/</organizationUrl>
 		</contributor>
 		<contributor>
+			<name>Curtis Rueden</name>
+			<url>http://loci.wisc.edu/people/curtis-rueden</url>
+			<organization>UW-Madison LOCI</organization>
+			<organizationUrl>http://loci.wisc.edu/</organizationUrl>
+		</contributor>
+		<contributor>
 			<name>Kevin Rushforth</name>
 			<url>https://www.linkedin.com/in/kevin-rushforth-8ba3b43</url>
 			<organization>Oracle Corporation</organization>
@@ -53,26 +62,36 @@
 			<url>https://www.linkedin.com/in/chien-yang-0884122</url>
 			<organization>Oracle Corporation</organization>
 			<organizationUrl>http://oracle.com/</organizationUrl>
-		</contributor>
-		<contributor>
-			<name>Curtis Rueden</name>
-			<url>http://loci.wisc.edu/people/curtis-rueden</url>
-			<organization>UW-Madison LOCI</organization>
-			<organizationUrl>http://loci.wisc.edu/</organizationUrl>
-		</contributor>
+		</contributor>		
 	</contributors>
+	
+	<scm>
+		<connection>scm:git:http://github.com/philjord/vecmath</connection>
+		<developerConnection></developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/philjord/vecmath</url>
+	</scm>
 
 	<properties>
+	
 		<!-- NB: Avoid platform encoding warning when copying resources. -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		
+		<!-- Deploy to OSS Sonatype repository by default when releasing. -->
+		<releaseProfiles>sonatype-oss-release</releaseProfiles>
+		
 	</properties>
 
-	<build>
+	<build>	
+	    <defaultGoal>install</defaultGoal>
+
+		<sourceDirectory>${basedir}/src</sourceDirectory>		
+		
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.0</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
@@ -91,15 +110,105 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.4</version>
+				<version>3.1.1</version>
 				<configuration>
-					<javadocDirectory>${project.basedir}/src/main/java</javadocDirectory>
-					<additionalparam>-Xdoclint:none</additionalparam>
+					<additionalJOption>-Xdoclint:none</additionalJOption>
 					<links>
 						<link>http://docs.oracle.com/javase/8/docs/api/</link>
 					</links>
-				</configuration>
+				</configuration>				
 			</plugin>
 		</plugins>
 	</build>
+	
+	<profiles>
+		<!-- This profile enables releasing to the OSS Sonatype repository. -->
+		<profile>
+			<id>sonatype-oss-release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.7</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>sonatype-nexus-releases</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+							<stagingProgressTimeoutMinutes>15</stagingProgressTimeoutMinutes>
+							<stagingProgressPauseDurationSeconds>12</stagingProgressPauseDurationSeconds>
+							<!--
+							By having no explicit stagingProfileId, we use
+							Staging V2 in "auto" mode, profile will be
+							matched server side
+							-->
+						</configuration>
+					</plugin>
+					<plugin>
+						<inherited>true</inherited>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-deploy-plugin</artifactId>
+						<version>2.8.2</version>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<useAgent>true</useAgent>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>2.5.3</version>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.1.1</version>
+						<configuration>
+							<additionalJOption>-Xdoclint:none</additionalJOption>
+							<links>
+								<link>http://docs.oracle.com/javase/8/docs/api/</link>
+							</links>
+						</configuration>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>	
 </project>
