--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -105,8 +105,29 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 						</manifest>
-					</archive>
-				</configuration>
+            <manifestEntries>
+              <Export-Package>development</Export-Package>
+              <Bundle-Version>${project.version}</Bundle-Version>
+              <Bundle-Name>Vecmath Library</Bundle-Name>
+              <Bundle-SymbolicName>org.jogamp.vecmath</Bundle-SymbolicName>
+              <Export-Package>org.jogamp.vecmath</Export-Package>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
